Revision history for Perl extension Config-Registry.

{{$NEXT}}

0.01 2020-01-19T15:53:56Z

 - First release.
