@@ -2,6 +2,9 @@ Revision history for Perl extension Config-Registry.
 
 {{$NEXT}}
 
+ - Stop using Hash::Merge since when it uses Storable for cloning it
+   fails on objects.
+
 0.01 2020-01-19T15:53:56Z
 
  - First release.
